force-app/main/default/objects/Integeration_Setting__mdt/Integeration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Integeration Setting</label>
    <pluralLabel>Integeration Settings</pluralLabel>
</CustomObject>