force-app/main/default/objects/Integeration_Setting__mdt/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <label>Authentication</label>
    <length>20</length>
    <type>Text</type>
</CustomField>