force-app/main/default/objects/Integeration_Setting__mdt/fields/Authentication_Required__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authentication Required?</label>
    <type>Checkbox</type>
</CustomField>