force-app/main/default/objects/Integeration_Setting__mdt/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oAuth2-Username-Password</fullName>
                <default>true</default>
                <label>oAuth2-Username-Password</label>
            </value>
            <value>
                <fullName>oAuth2-Refresh-Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>