force-app/main/default/objects/Integeration_Setting__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <type>TextArea</type>
</CustomField>