force-app/main/default/objects/Integeration_Setting__mdt/fields/Custom_API_Handler__c.field-meta.xml
<CustomField>
    <fullName>Custom_API_Handler__c</fullName>
    <label>Custom API Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>