force-app/main/default/objects/Integeration_Setting__mdt/fields/http_method__c.field-meta.xml
<CustomField>
    <fullName>http_method__c</fullName>
    <label>http method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>