force-app/main/default/objects/Integeration_Setting__mdt/fields/Http_Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Http_Request_Timeout__c</fullName>
    <label>Http Request Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>