force-app/main/default/objects/Integeration_Setting__mdt/fields/HttpEndpoint__c.field-meta.xml
<CustomField>
    <fullName>HttpEndpoint__c</fullName>
    <label>HttpEndpoint</label>
    <type>Url</type>
</CustomField>