force-app/main/default/objects/Integeration_Setting__mdt/fields/is_Http_Body_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Http_Body_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Http Body Required?</label>
    <type>Checkbox</type>
</CustomField>