force-app/main/default/objects/Integeration_Setting__mdt/fields/Mutual_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Authentication__c</fullName>
    <label>Mutual Authentication</label>
    <length>20</length>
    <type>Text</type>
</CustomField>