force-app/main/default/objects/Integeration_Setting__mdt/fields/Outbound_API_Error_Handler__c.field-meta.xml
<CustomField>
    <fullName>Outbound_API_Error_Handler__c</fullName>
    <label>Outbound API Error Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>