force-app/main/default/objects/Integeration_Setting__mdt/fields/RequestHandler__c.field-meta.xml
<CustomField>
    <fullName>RequestHandler__c</fullName>
    <label>RequestHandler</label>
    <length>20</length>
    <type>Text</type>
</CustomField>