force-app/main/default/objects/Integeration_Setting__mdt/fields/ResponseHandler__c.field-meta.xml
<CustomField>
    <fullName>ResponseHandler__c</fullName>
    <label>ResponseHandler</label>
    <length>20</length>
    <type>Text</type>
</CustomField>