force-app/main/default/objects/Integeration_Setting__mdt/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <label>Retry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>