force-app/main/default/objects/Integeration_Setting__mdt/fields/Retry_Required__c.field-meta.xml
<CustomField>
    <fullName>Retry_Required__c</fullName>
    <label>Retry Required</label>
    <length>20</length>
    <type>Text</type>
</CustomField>